[Fix] Scrollbar & size of Code editor on System screen - always show full size of code editor and only one scroll bar

--- a/webapp/css/style.css
+++ b/webapp/css/style.css
@@ -22,6 +22,16 @@ After adding these lines  the issue is fixed */
 	padding: 10px;
 }
 
+.column2 {
+	flex-flow: column;
+	height: 100%;
+	display: flex;
+}
+
+.wattEditorContainer {
+	flex-grow: 1;
+}
+
 /* .sapMFlexItemAlignAuto {
 	width="50%";
 } */
